PXC-25347 - sonar refactor , move constants